--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello World! This will be an portfolio about Jaysin</h1>
         <p>I'm hosted with Github</p>
     </body>
 </html>
