added a background and started fixing the button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="style.css">
     <body>
-        <h1>Hello World! This will be an portfolio about Jaysin</h1>
+        <h1>Welcome! This will be a portfolio about Jaysin</h1>
         <p>I'm hosted with Github</p>
     </body>
+    <p><button>
+        <b>About</b>
+    </button>
+    </p>
 </html>
