--- a/public/style.css
+++ b/public/style.css
@@ -8,3 +8,13 @@ h1 {
   text-align: center;
   color: azure;
 }
+.button {
+  background-color: aquamarine;
+  border: none;
+  color: darkblue;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 16px;
+}
