--- a/style.css
+++ b/style.css
@@ -31,18 +31,18 @@ h1 {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
-  border-radius: 0 4px 4px 0;
+  border-radius: 0 3px 3px 0;
   user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 4px 0 0 4px;
+  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
@@ -52,7 +52,7 @@ h1 {
 
 /* Caption text */
 .text {
-  color: #000000;
+  color: #ffffff;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
