--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ h1 {
   text-align: center;
   color: azure;
 }
-
+p {
+  text-align: center;
+  color: azure;
+}
 * {box-sizing:border-box}
 
 /* Slideshow container */
